fix: reduced sizing of components, increased white space for future features

--- a/src/styles/weather-data.css
+++ b/src/styles/weather-data.css
@@ -1,14 +1,14 @@
 .weather-icon {
-  width: 190px;
-  margin-top: 10px;
-  margin-bottom: 15px;
+  width: 150px;
+  margin-top: 12px;
+  margin-bottom: 20px;
 }
 
 .temperature {
-  font-size: 60px;
+  font-size: 50px;
   line-height: 1;
   font-weight: 700;
-  margin-bottom: 7px;
+  margin-bottom: 20px;
   width: 100%;
   text-align: center;
   white-space: nowrap;
@@ -17,8 +17,7 @@
 }
 
 .date {
-  margin-top: 10px;
-  font-size: 21px;
+  font-size: 20px;
   width: 100%;
   text-align: center;
   white-space: nowrap;
@@ -28,7 +27,7 @@
 
 .weather-data {
   width: 100%;
-  margin-top: 30px;
+  margin-top: 23px;
   display: flex;
   justify-content: space-between;
 }
