--- a/src/styles/weather.css
+++ b/src/styles/weather.css
@@ -13,7 +13,8 @@
 .weather-wrapper {
   display: flex;
   justify-content: space-between;
-  width: 1180px;
+  width: 1080px;
+  margin-top: 50px;
 }
 
 .weather {
@@ -22,12 +23,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 350px;
-  height: 494.9px;
+  width: 330px;
+  height: 440px; /* 1.3 rectangle ratio */
 }
 
 .location {
-  font-size: 32px;
+  font-size: 26px;
   font-weight: 800;
   margin: 15px 0 5px;
   width: 45%;
